<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.stem.iets.MainActivity">

    <TextView
        style="@style/headers"
        android:text="@string/welcome"/>

    <TextView
        style="@style/paragraph"
        android:text="@string/welcome_text"/>

    <TextView
        style="@style/paragraph"
        android:text="@string/instructions"/>

    <TextView
        android:text="@string/kieskompas"
        style="@style/credits" />
    <TextView android:id="@+id/kieskompas_link"
        style="@style/credits" />

    <Button
        style="@style/start_button"
        android:text="@string/start_button"
        android:id="@+id/start_button"/>
</LinearLayout>
