<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.stem.iets.MainActivity">
    <TextView
        android:id="@+id/thesis"
        style="@style/paragraph"
        android:text="@string/stelling1"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/round_button_agree"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/completelyAgree"
            android:textColor="#263238"
            android:layout_below="@+id/button20"
            android:layout_toRightOf="@+id/button20"
            android:layout_toEndOf="@+id/button20"
            android:onClick="agreeButton"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/round_button_agree"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/agree"
            android:textColor="#263238"
            android:layout_alignTop="@+id/button21"
            android:layout_toRightOf="@+id/button20"
            android:layout_toEndOf="@+id/button20"
            android:onClick="agreeButton"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/round_button_neutral"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/neutral"
            android:textColor="#263238"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/button20"
            android:onClick="neutralButton"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/round_button_disagree"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/disagree"
            android:textColor="#263238"
            android:layout_above="@+id/button20"
            android:layout_toLeftOf="@+id/button20"
            android:layout_toStartOf="@+id/button20"
            android:id="@+id/button21"
            android:onClick="disagreeButton"/>

        <Button
            android:id="@+id/button"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/round_button_disagree"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/completelyDisagree"
            android:textColor="#263238"
            android:layout_below="@+id/button20"
            android:layout_toLeftOf="@+id/button20"
            android:layout_toStartOf="@+id/button20"
            android:onClick="disagreeButton"/>

</RelativeLayout>